# xmlrpc

./: Makefile  cabal.project  stack.yaml  xmlrpc.cabal
examples/: Makefile  README.md  xmlrpc-examples.cabal
examples/introspect/: make-stubs.hs  parse_response.hs  raw_call.hs
examples/person/: Person.hs  PersonTH.hs  person_client.hs  person_server.hs
examples/simple/: simple_client.hs  simple_server.hs  test_client.hs  test_server.hs
examples/time-xmlrpc-com/: time-xmlrpc-com.hs
examples/validator-xmlrpc-com/: validator-xmlrpc-com.hs
release/documentation/: Network.XmlRpc.Base64.html  Network.XmlRpc.Classes.html  Network.XmlRpc.Client.html  Network.XmlRpc.DTD_XMLRPC.html  Network.XmlRpc.Internals.html  Network.XmlRpc.Introspect.html  Network.XmlRpc.Pretty.html  Network.XmlRpc.Server.html  Network.XmlRpc.THDeriveXmlRpcType.html  Network.XmlRpc.Types.html  Prelude_xmlrpc.html  XmlRpc.html
xmlrpc/: xmlrpc.cabal
xmlrpc/docs/: NOTES.html  NOTES.md
xmlrpc/sources/: .dir-locals.el  Prelude_xmlrpc.hs  XmlRpc.hs
xmlrpc/sources/Network/XmlRpc/: Base64.hs  Classes.hs  Client.hs  DTD_XMLRPC.hs  Internals.hs  Introspect.hs  Pretty.hs  Server.hs  THDeriveXmlRpcType.hs  Types.hs
xmlrpc/tests/: .dir-locals.el  Properties.hs
