Cabal-version: 2.2

Name: xmlrpc
Version: 0.0.0
         
Build-type: Simple
Copyright: Sam Boosalis 2018
License:      BSD-3-Clause
License-file: LICENSE
Author:     Bjorn Bringert <bjorn@bringert.net>, Malcolm Wallace <Malcolm.Wallace@me.com>
Maintainer: Sam Boosalis <samboosalis@gmail.com>
Homepage: 
Category: RPC, XML, Network
Synopsis: XML-RPC client and server library.
Description:
        XMLRPC is a library for writing XML-RPC
        client and server applications in Haskell.

Extra-Source-Files:
        CHANGES
        examples/make-stubs.hs        examples/parse_response.hs    examples/Person.hs
        examples/PersonTH.hs          examples/person_client.hs     examples/person_server.hs
        examples/raw_call.hs          examples/simple_client.hs     examples/simple_server.hs
        examples/test_client.hs       examples/test_server.hs       examples/time-xmlrpc-com.hs
        examples/validate.hs          examples/Makefile
Bug-reports: https://github.com/byorgey/xmlrpc/issues
Tested-with:
  GHC == 8.4.3

Source-repository head
  type:     git
  location: git://github.com/byorgey/xmlrpc.git

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

Library
  Build-depends: base < 5,
                 base-compat >= 0.8 && < 0.10,
                 mtl,
                 mtl-compat,
                 network < 2.7,
                 http-streams,
                 HsOpenSSL,
                 io-streams,
                 http-types,
                 HaXml2 >= 1.25.6,
                 http-streams,
                 bytestring,
                 base64-bytestring,
                 old-locale,
                 old-time,
                 time,
                 text,
                 array,
                 utf8-string,
                 template-haskell,
                 blaze-builder >= 0.2 && < 0.5

  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6

  Exposed-Modules:
        Network.XmlRpc.Client,
        Network.XmlRpc.Server,
        Network.XmlRpc.Internals,
        Network.XmlRpc.Introspect,
        Network.XmlRpc.THDeriveXmlRpcType,
        Network.XmlRpc.Pretty,
        Network.XmlRpc.DTD_XMLRPC
  Other-Modules:
        Network.XmlRpc.Base64
  Default-extensions: TypeSynonymInstances, FlexibleInstances
  Other-extensions: OverloadedStrings, GeneralizedNewtypeDeriving, TemplateHaskell
  Default-language: Haskell2010
