Cabal-version: 2.2

Name: xmlrpc
Version: 0.0.0
         
Build-type: Simple
            
Copyright: Sam Boosalis 2018
License:      BSD-3-Clause
License-file: documents/LICENSE
Author:     Bjorn Bringert <bjorn@bringert.net>, Malcolm Wallace <Malcolm.Wallace@me.com>, Brent Yorgey <byorgey@gmail.com>, Sam Boosalis <samboosalis@gmail.com>
Maintainer: Sam Boosalis <samboosalis@gmail.com>
            
Synopsis: XML-RPC client and server library.
Description:
        XMLRPC is a library for writing XML-RPC
        client and server applications in Haskell.
Category: RPC, XML, Network


Extra-Source-Files:
                   Makefile
                   README.md
                   LICENSE
                              
Tested-with:
  GHC == 8.4.3

Homepage: https://github.com/sboosali/xmlrpc#readme
Bug-reports: https://github.com/sboosali/xmlrpc/issues

Source-repository head
  type:     git
  location: git://github.com/sboosali/xmlrpc.git
  subdir:   xmlrpc

flag network-uri
   description: Get Network.URI from the network-uri package
   default: False

Library
  hs-source-dirs: sources
  Build-depends: base < 5,
                 base-compat >= 0.8 && < 0.10,
                 mtl,
                 mtl-compat,
                 network < 2.7,
                 http-streams,
                 HsOpenSSL,
                 io-streams,
                 http-types,
                 HaXml2 >= 1.25.6,
                 http-streams,
                 bytestring,
                 base64-bytestring,
                 old-locale,
                 old-time,
                 time,
                 text,
                 array,
                 utf8-string,
                 template-haskell,
                 blaze-builder >= 0.2 && < 0.5

  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6

  Exposed-Modules:
        Network.XmlRpc.Client,
        Network.XmlRpc.Server,
        Network.XmlRpc.Internals,
        Network.XmlRpc.Introspect,
        Network.XmlRpc.THDeriveXmlRpcType,
        Network.XmlRpc.Pretty,
        Network.XmlRpc.DTD_XMLRPC
  Other-Modules:
        Network.XmlRpc.Base64
  Default-extensions: TypeSynonymInstances, FlexibleInstances
  Other-extensions: OverloadedStrings, GeneralizedNewtypeDeriving, TemplateHaskell
  Default-language: Haskell2010
